--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-feature android:name="android.hardware.camera"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
 
     <application
         android:name=".app.App"
@@ -54,20 +57,20 @@
             android:configChanges="locale|layoutDirection|orientation|screenSize|keyboardHidden"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity
-            android:name=".Camera2Activity"
-            android:label="@string/title_activity_camera2"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"
-            android:configChanges="locale|layoutDirection|orientation|screenSize|keyboardHidden"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+        <!--<activity-->
+            <!--android:name=".Camera2Activity"-->
+            <!--android:label="@string/title_activity_camera2"-->
+            <!--android:screenOrientation="portrait"-->
+            <!--android:windowSoftInputMode="stateHidden"-->
+            <!--android:configChanges="locale|layoutDirection|orientation|screenSize|keyboardHidden"-->
+            <!--android:theme="@style/AppTheme.NoActionBar">-->
+        <!--</activity>-->
         <activity
             android:name=".Camera3Activity"
             android:label="@string/title_activity_camera2"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"
-            android:configChanges="locale|layoutDirection|orientation|screenSize|keyboardHidden"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
