--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url "https://jitpack.io" }
+        maven { url "http://maven.outofmemory.cn/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
@@ -17,7 +17,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url "https://jitpack.io" }
+        maven { url "http://maven.outofmemory.cn/" }  //https://jitpack.io/
     }
 }
 
